dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-groovy
  labels:
    app: demo-groovy
    type: actuator
  annotations:
    management.context-path: /demo/greet/kube
spec:
  ports:
    - name: http
      port: 8999
      protocol: TCP
      targetPort: 8999
  selector:
    app: demo-groovy
  type: ClusterIP
