dev/ingress.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: demo-http-web-proxy
spec:
  virtualhost:
    fqdn: argo.demo.local
  routes:
    - conditions:
        - prefix: "/"
      services:
        - name: demo-groovy
          port: 8999
